# llm-copilot-agent

./: BENCHMARK_COMPLIANCE_REPORT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
apps/copilot-cli/: Cargo.toml
apps/copilot-cli/src/: config.rs  main.rs  output.rs
apps/copilot-cli/src/commands/: ask.rs  benchmark.rs  chat.rs  completions.rs  config.rs  context.rs  conversation.rs  health.rs  init.rs  mod.rs  sandbox.rs  server.rs  version.rs  workflow.rs
apps/copilot-server/: Cargo.toml
apps/copilot-server/src/: app.rs  cli.rs  main.rs  server.rs  telemetry.rs
benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
benchmarks/adapters/: mod.rs
benchmarks/output/: summary.md
crates/copilot-adapters/: Cargo.toml
crates/copilot-adapters/src/: circuit_breaker.rs  lib.rs  retry.rs
crates/copilot-adapters/src/benchmarks/: benchmark_exchange.rs  mod.rs  test_bench.rs
crates/copilot-adapters/src/llm_devops/: analytics_hub.rs  auto_optimizer.rs  connector_hub.rs  cost_ops.rs  data_vault.rs  governance_dashboard.rs  marketplace.rs  memory_graph.rs  mod.rs  observatory.rs  orchestrator.rs  policy_engine.rs  registry.rs  research_lab.rs  router.rs  sentinel.rs  shield.rs  simulator.rs
crates/copilot-api/: Cargo.toml
crates/copilot-api/src/rest/: router.rs
crates/copilot-benchmarks/: Cargo.toml
crates/copilot-benchmarks/src/: io.rs  lib.rs  markdown.rs  result.rs  traits.rs
crates/copilot-benchmarks/src/adapters/: context_retrieval.rs  conversation.rs  ingestion.rs  intent_classification.rs  mod.rs  observability.rs  sandbox_execution.rs  workflow.rs
crates/copilot-context/: Cargo.toml
crates/copilot-context/src/: compression.rs  hybrid_search.rs  lib.rs  memory.rs  reranking.rs  retrieval.rs
crates/copilot-conversation/: Cargo.toml
crates/copilot-conversation/src/: history.rs  manager.rs  streaming.rs
crates/copilot-core/: Cargo.toml
crates/copilot-core/src/: cache.rs  config.rs  events.rs  lib.rs  types.rs
crates/copilot-e2b/: Cargo.toml
crates/copilot-e2b/src/: agent.rs  config.rs  execution.rs  lib.rs  sandbox.rs
crates/copilot-infra/: Cargo.toml
crates/copilot-infra/src/: lib.rs
crates/copilot-infra/src/cache/: memory.rs  mod.rs  redis.rs  response.rs
crates/copilot-infra/src/messaging/: nats.rs
crates/copilot-infra/src/metrics/: collector.rs  mod.rs  prometheus.rs
crates/copilot-infra/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs  retry.rs  timeout.rs
crates/copilot-ingestion/: Cargo.toml
crates/copilot-ingestion/src/: chunking.rs  extractors.rs  lib.rs  pipeline.rs  processors.rs
crates/copilot-nlp/: Cargo.toml
crates/copilot-nlp/src/: engine.rs  error.rs  intent.rs  lib.rs
crates/copilot-observability/: Cargo.toml
crates/copilot-observability/src/: analytics.rs  correlation.rs  dashboards.rs  lib.rs  sla.rs  tracing_setup.rs
crates/copilot-sdk/: Cargo.toml
crates/copilot-sdk/src/: client.rs  error.rs  lib.rs  models.rs  streaming.rs
crates/copilot-security/: Cargo.toml
crates/copilot-security/src/: api_key.rs  audit.rs  auth.rs  error.rs  jwt.rs  lib.rs  password.rs  rate_limit.rs  rbac.rs
crates/copilot-security/tests/: integration_test.rs
crates/copilot-tenant/: Cargo.toml
crates/copilot-tenant/src/: billing.rs  isolation.rs  lib.rs  metering.rs  onboarding.rs  quota.rs  tenant.rs
crates/copilot-webhook/: Cargo.toml
crates/copilot-webhook/src/: delivery.rs  events.rs  inbound.rs  lib.rs  outbound.rs  signature.rs
crates/copilot-workflow/: Cargo.toml
crates/copilot-workflow/src/: approval.rs  dag.rs  engine.rs  lib.rs  scheduling.rs  templates.rs  triggers.rs  versioning.rs
deploy/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docker/: .env.example  Dockerfile.mock  docker-compose.dev.yml  docker-compose.yml
docker/init-scripts/: 01-init.sql
docker/prometheus/: prometheus.yml
docs/: MILESTONE_DEPENDENCY_MATRIX.md  MODULE_INTEGRATION_DESIGN.md  MONITORING-SUMMARY.md  PERFORMANCE_OPTIMIZATION_STRATEGY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md
docs/api/: reference.md
docs/architecture/: DEPLOYMENT-ARCHITECTURE.md  overview.md
docs/cli/: reference.md
docs/deployment/: production.md
docs/guides/: getting-started.md
plans/: ENTERPRISE_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  LLM-CoPilot-Agent-SPARC-Complete.md  ROADMAP_SUMMARY.md
scripts/: verify_tests.sh
sdks/go/: go.mod
sdks/go/copilot/: copilot.go
sdks/java/: pom.xml
sdks/python/: README.md  pyproject.toml
sdks/python/llm_copilot/: __init__.py  client.py  exceptions.py  models.py  retry.py  streaming.py
sdks/python/llm_copilot/documents/: __init__.py  client.py  models.py
sdks/python/tests/: __init__.py  test_client.py  test_documents.py  test_exceptions.py  test_models.py  test_retry.py
sdks/typescript/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts  copilot.test.ts
security-architecture/: INCIDENT-ALGORITHMS-DELIVERABLE.md
services/admin-ui/: index.html  package.json
services/admin-ui/src/: App.tsx  index.css  main.tsx
services/ai-platform/: package.json
services/ai-platform/migrations/: 001_initial_schema.sql
services/ai-platform/src/: index.ts
services/alerting/: package.json
services/alerting/migrations/: 001_initial_schema.sql
services/alerting/src/: index.ts
services/billing/: package.json
services/billing/migrations/: 001_initial_schema.sql  002_add_tenants_table.sql  003_usage_partitioning.sql
services/billing/src/: index.ts
services/compliance/: package.json
services/governance/: package.json
services/portal-ui/: package.json
services/status-page/: package.json
services/support/: package.json  tsconfig.json
tools/mock-server/: package.json
tools/vscode-extension/: package.json
(+144 files in other folders)
