[package]
name = "copilot-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
copilot-core = { path = "../../crates/copilot-core" }
copilot-nlp = { path = "../../crates/copilot-nlp" }
copilot-context = { path = "../../crates/copilot-context" }
copilot-conversation = { path = "../../crates/copilot-conversation" }
copilot-api = { path = "../../crates/copilot-api" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# CLI
clap = { workspace = true }
dotenv = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
