[package]
name = "copilot-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Adapter implementations for LLM CoPilot Agent modules"

[dependencies]
copilot-core = { path = "../copilot-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
