[package]
name = "copilot-api"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE.md"
description = "API layer for LLM CoPilot Agent"

[dependencies]
# Internal dependencies
copilot-core = { path = "../copilot-core" }
copilot-conversation = { path = "../copilot-conversation" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Async traits
async-trait = { workspace = true }
futures = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Authentication
jsonwebtoken = "9.3"

# Rate limiting
governor = "0.6"

# Utilities
lazy_static = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# HTTP types
http = "1.1"
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tower = { workspace = true }
hyper = { workspace = true }

[features]
default = ["rest", "websocket", "grpc"]
rest = []
websocket = []
grpc = []
