[package]
name = "copilot-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Canonical benchmark interface for LLM CoPilot Agent"

[lib]
name = "copilot_benchmarks"
path = "src/lib.rs"

[dependencies]
# Internal crates
copilot-core = { path = "../copilot-core" }
copilot-nlp = { path = "../copilot-nlp" }
copilot-context = { path = "../copilot-context" }
copilot-conversation = { path = "../copilot-conversation" }
copilot-workflow = { path = "../copilot-workflow" }
copilot-adapters = { path = "../copilot-adapters" }
copilot-e2b = { path = "../copilot-e2b" }
copilot-observability = { path = "../copilot-observability" }
copilot-ingestion = { path = "../copilot-ingestion" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
