[package]
name = "copilot-context"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
copilot-core = { path = "../copilot-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Token counting
tiktoken-rs = "0.5"

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections and data structures
dashmap = { workspace = true }
priority-queue = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
pretty_assertions = "1.4"
tracing-subscriber = { workspace = true }
