[package]
name = "copilot-conversation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Conversation management for LLM CoPilot Agent"

[dependencies]
# Internal dependencies
copilot-core = { path = "../copilot-core" }
copilot-nlp = { path = "../copilot-nlp" }
copilot-context = { path = "../copilot-context" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
