[package]
name = "copilot-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["LLM DevOps Team"]
license = "Proprietary"
description = "Core types, traits, and configurations for LLM-CoPilot-Agent"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Date/Time handling
chrono = { workspace = true, features = ["serde"] }

# Configuration management
config = { workspace = true }

# Async traits
async-trait = { workspace = true }

# System info
num_cpus = "1.16"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
