[package]
name = "copilot-infra"
version.workspace = true
edition.workspace = true

[dependencies]
copilot-core = { path = "../copilot-core" }

# Database
sqlx = { workspace = true }

# Cache
redis = { workspace = true }

# Messaging
async-nats = "0.33"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Random
rand = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = "0.4"
