[package]
name = "copilot-nlp"
version.workspace = true
edition.workspace = true
authors = ["LLM CoPilot Agent Team"]
description = "Natural Language Processing engine for LLM CoPilot Agent"
license = "MIT OR Apache-2.0"

[dependencies]
copilot-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
regex.workspace = true
lazy_static.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
