[package]
name = "copilot-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability and analytics for LLM CoPilot Agent"

[dependencies]
# Internal crates
copilot-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-opentelemetry = { workspace = true }

# Utilities
rand = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# HTTP for metrics endpoint
axum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
