[package]
name = "copilot-webhook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Webhook support for LLM CoPilot Agent"

[dependencies]
# Internal crates
copilot-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Web framework (for incoming webhooks)
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Cryptography for signatures
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
rand = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
