[package]
name = "copilot-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Workflow engine for LLM CoPilot Agent with DAG execution, approval gates, and state management"
license = "MIT OR Apache-2.0"

[dependencies]
copilot-core = { path = "../copilot-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
petgraph = "0.6"
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
