[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-copilot"
version = "0.1.0"
description = "Python SDK for LLM CoPilot Agent - AI-powered development assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LLM-CoPilot-Agent Team" }
]
keywords = [
    "llm",
    "copilot",
    "ai",
    "agent",
    "automation",
    "development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/llm-copilot-agent/llm-copilot-agent"
Documentation = "https://github.com/llm-copilot-agent/llm-copilot-agent/tree/main/sdks/python"
Repository = "https://github.com/llm-copilot-agent/llm-copilot-agent"
Issues = "https://github.com/llm-copilot-agent/llm-copilot-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]
